Adjusts spacing for feature header image, adds correct screenshots

--- a/centro/css/style.css
+++ b/centro/css/style.css
@@ -415,7 +415,19 @@ header .menu-icon i:hover{
     background-image: url(../img/TemplateImg/blue-features-header-05.svg);
 }
 
+#features .feature-header-image .col-md-8 {
+    float: none;
+    width: 66%;
+    margin: auto;
+    padding: 0;
+
+}
+
 .feature-image img {
+    width: 100%;
+}
+
+.feature-header-image img {
     width: 100%;
 }
 
@@ -1063,6 +1075,13 @@ border-top: 22px solid #3fbfE1;
 
     }
 
+    .feature-header-image {
+        float: none;
+        width: 100%;
+        margin: auto;
+        padding: 0;
+
+    }
 }
 
 
@@ -1203,6 +1222,9 @@ border-top: 22px solid #3fbfE1;
     }
     
     .feature-image img{
+        max-width: 100%;
+    }
+    .feature-header-image img{
         max-width: 100%;
     }
     
